deployment/applications/namespaces/networking/ingress-nginx/templates/argo.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argo
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingresks.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argo.demo.zebreje.uk
  rules:
    - host: "argo.demo.zebreje.uk"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argo-argocd-server
                port:
                  number: 80
